<package>
  <name>tp_etudiant</name>
  <description>tp_etudiant node</description>
  <maintainer email="simon.demmer@etu.enseeiht.fr">Simon le Chef</maintainer>
  <version>3.1.2</version>
  <author>Simon le Chef</author>
  <license>GPLv3</license>
  <url>http://www.fr</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
